@@ -10,6 +10,7 @@ Jump Start Changelog
 * Expanded options for divider component.
 * Fixed issues with new Footer Sync feature and using Columns element. Make sure to update Layout Builder plugin to v2.0.2, also.
 * Fixed "color" value of "typography" option type.
+* Fixed bug with not being able to apply background color opacity to display options for columns in the Columns element.
 * Fixed fatal error with WooCommerce.
 
 2.0.0-beta1
